hard-gists/2522574/run.log
=== Docker Run Log for 2522574 ===
Started at: Mi 29. Okt 13:05:59 CET 2025

[2025-10-29 13:05:59] START: Running container for 2522574
[2025-10-29 13:05:59] SUCCESS: Container ec4077354f1b8ccc3e23ac301a4f5e9dbda54cfa640b59496ec38519388f4b97 started for 2522574
=== Container logs for 2522574 ===
  File "/snippet.py", line 33
    raise exception.__class__, exception, trace
                             ^
SyntaxError: invalid syntax
=== End of logs for 2522574 ===
[2025-10-29 13:06:01] INFO: Container ec4077354f1b8ccc3e23ac301a4f5e9dbda54cfa640b59496ec38519388f4b97 has stopped
